simple-cdd: Bump kernel to 6.5.0
Also add missing packages which are now required for bookworm.

Signed-off-by: Manivannan Sadhasivam <manivannan.sadhasivam@linaro.org>

--- a/simple-cdd/profiles/gnome.conf
+++ b/simple-cdd/profiles/gnome.conf
@@ -1,3 +1,5 @@
 profiles="gnome"
 auto_profiles="gnome"
 export KERNEL_PARAMS="efi=novamap pd_ignore_unused clk_ignore_unused"
+local_packages="/root/debian-cdimage/simple-cdd/localpackages"
+custom_installer="/root/debian-cdimage/simple-cdd/debian/installer"
